Add fetching all reports
